--- a/css/template.css
+++ b/css/template.css
@@ -442,7 +442,7 @@ div.labels
     font-size: 13px;
 }
 
-.detail-description code {
+.long_description code {
     white-space: pre;
     display:     inline-block;
     padding:     10px;
